--- a/client/src/Components/Create/Create.module.scss
+++ b/client/src/Components/Create/Create.module.scss
@@ -3,38 +3,37 @@
 
 .main {
   @include dimensions(100%, max-content);
-  align-content: flex-start !important;
 
   color: $font-color-3;
   font-family: $link-font;
 
   & section {
-    @include dimensions(clamp(500px, 85%, 1030px), 100%);
-    margin:3rem auto;
-    padding: 2rem;
+    @include dimensions(clamp(400px, 85%, 1030px), 100%);
+    margin: $offset-top-header auto;
+    padding: 1rem;
 
     background-color: $bg-color-3;
-    border-radius: 25px;
+    @include border(null, null, null, map-get($radius, "medium"));
     box-shadow: $shadow-2;
 
     color: $font-color-1;
     text-align: center;
 
     h2 {
-      font-size: 1.7rem;
+      font-size: map-get($font-sizes, "xl");
     }
 
     h3 {
       margin: 1rem 0;
       padding-bottom: 1rem;
 
-      font-weight: 600;
-      font-size: 1.7rem;
+      font-weight: map-get($font-weights, "medium");
+      font-size: map-get($font-sizes, "xl");
       border-bottom: 2px solid $bg-color-3;
     }
     p {
       margin-bottom: 1rem;
-      font-size: 1.1rem;
+      font-size: map-get($font-sizes, "medium");
     }
 
     form {
@@ -42,17 +41,16 @@
 
       & > button {
         all: unset;
-        width: 100px;
         margin: 2rem 0.5rem;
-        padding: 0.5rem;
+        padding: 0.5rem 1rem;
 
+        @include border(null, null, null, map-get($radius, "medium"));
         background-color: $nav-bg-color-light;
 
         text-align: center;
         color: $font-color-3;
         font-family: $text-font;
 
-        border-radius: 25px;
         cursor: pointer;
         transition: $transition;
 
@@ -75,15 +73,13 @@
 }
 
 .data-form {
-  display: flex;
-  flex-flow: row wrap;
+  @include flex-box(row,wrap);
   justify-content: center;
-  gap: 1rem;
+  column-gap: 1rem;
 
   & > div {
     @include dimensions(12rem, 7rem);
-    display: flex;
-    flex-direction: column;
+    @include flex-box(column,wrap);
     align-items: center;
     align-content: center;
 
@@ -103,20 +99,17 @@
         pointer-events: none;
         filter: invert(100%);
       }
-
     }
 
     & span {
       display: inline-block;
       margin-top: 5px;
       height: 17px;
-      
+
       color: $error-color;
-      font-size: 14px;
-      line-height: 17px;
+      font-size: map-get($font-sizes,"small");
       text-overflow: ellipsis;
       text-align: center;
-
     }
 
     label {
@@ -138,9 +131,8 @@
 
       color: $font-color-3;
       font-family: $text-font;
-      font-size: 1rem;
+      font-size: map-get($font-sizes,"small");
 
-      overflow: auto;
       cursor: pointer;
     }
 
@@ -157,21 +149,5 @@
   & > div:nth-last-child(2) {
     @include dimensions(100%, 80%);
     text-align: center;
-
-    & textarea {
-      @include dimensions(80%, 100%);
-      min-height: 100px;
-      margin: auto;
-      padding: 0.5rem;
-
-      border: none;
-      outline: none;
-
-      color: $font-color-2;
-      font-family: $text-font;
-      font-weight: 600;
-
-      resize: vertical;
-    }
   }
 }
