--- a/client/src/Components/Details/CarDetails.module.scss
+++ b/client/src/Components/Details/CarDetails.module.scss
@@ -3,7 +3,7 @@
 
 .main {
   @include dimensions(clamp(500px, 85%, 1030px), max-content);
-  margin: 2rem auto;
+  margin: $offset-top-header auto;
 }
 
 .details-container {
@@ -36,29 +36,26 @@
 .contacts,
 .description,
 .technicals {
-  display: flex;
-  flex-direction: column;
+  @include flex-box(column,wrap);
   row-gap: 1rem;
   padding: 1rem;
 
   background-color: $bg-color-3;
-  border-radius: 10px;
+  @include border(null,null,null,map-get($radius,"small"));
 
   color: $font-color-2;
 
   img {
     @include dimensions(20px, 20px);
     margin: 0 5px -5px 0;
-
-    filter: invert(30%);
   }
 
   h4,
   h5 {
     padding-bottom: 1rem;
 
-    font-size: 1.5rem;
-    font-weight: 700;
+    font-size: map-get($font-sizes, "large");
+    font-weight: map-get($font-weights, "medium");
     text-align: center;
     line-height: 2rem;
 
@@ -99,16 +96,16 @@
     background-color: $nav-bg-color-light;
 
     color: $font-color-3;
-    font-size: 1.2rem;
+    font-size: map-get($font-sizes, "medium");
   }
 
   h5 {
-    font-size: 1.1rem;
+    font-size: map-get($font-sizes, "medium");
   }
 
   sup {
     vertical-align: super;
-    font-size: 0.7rem;
+    font-size: map-get($font-sizes, "xs");
   }
 
   th,
@@ -122,7 +119,7 @@
   }
 
   th {
-    font-weight: 600;
+    font-weight: map-get($font-weights, "medium");
   }
 }
 
@@ -150,14 +147,11 @@
   z-index: 2;
 
   button {
-    display: flex;
-    flex-direction: row;
+    @include flex-box(row);
     padding: 1rem;
 
-    border-radius: 50%;
-    border: none;
-    outline: 2px solid rgba(255, 255, 255, 0);
-    outline-offset: -5px;
+    @include border(null, null, null, map-get($radius, "circle"));
+    @include outline(2px, solid, transparent, -5px);
     background-color: $nav-bg-color-light;
 
     cursor: pointer;
@@ -165,12 +159,11 @@
 
     & img {
       @include dimensions(1rem, 1rem);
-      filter: invert(100%);
     }
 
     &:hover,
     &:focus {
-      outline: 2px solid $bg-color-1;
+      @include outline(2px,solid,$bg-color-1,-5px)
     }
   }
 }
