--- a/client/src/Components/Footer/Footer.module.scss
+++ b/client/src/Components/Footer/Footer.module.scss
@@ -3,45 +3,38 @@
 
 .footer {
   @include dimensions(100%, max-content);
-  padding: 1rem 0;
-  display: flex;
-  flex-direction: row;
+  @include flex-box(row);
   justify-content: flex-start;
-
-  background: $nav-bg-color-dark;
+  padding: 1rem 0;
 
   & > div {
     padding: 2rem;
-
-    font-family: $text-font;
     text-align: center;
 
     li {
       margin: 1rem;
+      font-size: 15px;
     }
-  }
 
-  h3 {
-    margin-bottom: 1rem;
-
-    font-family: $link-font;
-    font-weight: 800;
-    font-size: 1.2rem;
+    h3 {
+      font-family: $link-font;
+      font-weight: map-get($font-weights, "medium");
+      font-size: map-get($font-sizes, "medium");
+    }
   }
 }
 
 .social {
-  width: 20%;
+  @include dimensions(20%, auto);
 
   ul {
     @include dimensions(100%, auto);
-    display: flex;
+    @include flex-box(row);
     justify-content: space-evenly;
+    margin-top: 1rem;
   }
 
   img {
     @include dimensions(30px, 30px);
-
-    filter: invert(100%);
   }
 }
