--- a/client/src/Components/Forms/AdvancedSearch.module.scss
+++ b/client/src/Components/Forms/AdvancedSearch.module.scss
@@ -2,14 +2,14 @@
 @import "../../main-styles/variables.scss";
 
 .form-wrapper {
-  @include dimensions(clamp(350px, 60%, 1000px),clamp(500px,85vh,600px));
+  @include dimensions(clamp(350px, 60%, 1000px), clamp(500px, 85vh, 600px));
   margin: 3vh auto;
   padding: 2rem 0;
   position: relative;
 
   background: $font-color-3;
   box-shadow: $shadow-2;
-  border-radius: 25px;
+  @include border(null, null, null, map-get($radius, "medium"));
 
   text-align: center;
 
@@ -22,14 +22,13 @@
 
     color: $font-color-1;
     font-family: $text-font;
-    font-weight: 600;
-    font-size: 1.7rem;
+    font-weight: map-get($font-weights, "medium");
+    font-size: map-get($font-sizes, "xl");
   }
 
   & > button:first-of-type {
     @include dimensions(2rem, 2rem);
-    display: flex;
-    flex-direction: row;
+    @include flex-box(row);
     justify-content: center;
     align-items: center;
     position: absolute;
@@ -37,8 +36,7 @@
     right: 1rem;
 
     background-color: $font-color-1;
-    border-radius: 50%;
-    border: none;
+    @include border(null, null, null, map-get($radius, "circle"));
     outline: none;
 
     cursor: pointer;
@@ -58,12 +56,10 @@
 
   & > button:nth-of-type(2) {
     all: unset;
-    width: 6rem;
-    margin: 0.5rem;
-    padding: 0.5rem;
+    padding: 0.5rem 1rem;
 
     background-color: $nav-bg-color-light;
-    border-radius: 25px;
+    @include border(null, null, null, map-get($radius, "medium"));
 
     color: $font-color-3;
     font-family: $text-font;
@@ -75,21 +71,19 @@
   & form {
     @include dimensions(80%, max-content);
     margin: 2rem auto;
-    display: flex;
-    flex-flow: row wrap;
+    @include flex-box(row, wrap);
     justify-content: center;
     align-items: center;
 
     & div {
       @include dimensions(25%, auto);
-      display: flex;
-      flex-direction: column;
+      @include flex-box(column, wrap);
       align-items: center;
       align-content: center;
 
-      overflow: hidden;
-
       font-family: $link-font;
+
+      overflow: hidden;
 
       button {
         all: unset;
@@ -100,7 +94,7 @@
 
         background-color: $nav-bg-color-light;
         box-shadow: $shadow-2;
-        border-radius: 5px;
+        @include border(null,null,null,5px);
 
         color: $font-color-3;
         font-family: $text-font;
@@ -149,7 +143,7 @@
         color: $font-color-3;
         background: $nav-bg-color-light;
         font-family: $text-font;
-        font-size: 1rem;
+        font-size:map-get($font-sizes,"small");
 
         cursor: pointer;
 
@@ -157,8 +151,8 @@
           color: $placeholder-color;
         }
       }
-      input{
-        padding:1rem 0 1rem 2rem;
+      input {
+        padding: 1rem 0 1rem 2rem;
       }
     }
   }
