--- a/client/src/Components/Home/Search.module.scss
+++ b/client/src/Components/Home/Search.module.scss
@@ -3,24 +3,23 @@
 
 .form-wrapper {
   @include dimensions(100%, 15rem);
+  margin: 2vw 0;
 
   & form {
-    @include dimensions(70%, max-content);
-    display: flex;
-    flex-flow: row wrap;
+    @include dimensions(clamp(300px, 100%, 600px), max-content);
+    @include flex-box(row, wrap);
     justify-content: center;
     align-items: center;
     padding: 2rem;
-    margin: 2rem auto;
+    margin: auto;
 
     background: $font-color-3;
     box-shadow: $shadow-2;
-    border-radius: 20px;
+    @include border(null, null, null, map-get($radius, "medium"));
 
     & div {
       @include dimensions(25%, 40%);
-      display: flex;
-      flex-direction: column;
+      @include flex-box(column, wrap);
       align-items: center;
       align-content: center;
 
@@ -41,13 +40,11 @@
         color: $font-color-3;
         font-family: $text-font;
 
-        border-radius: 5px;
+        @include border(null, null, null, 5px);
         cursor: pointer;
 
         img {
           @include dimensions(25%, 25%);
-
-          filter: invert(100%);
         }
       }
 
@@ -88,7 +85,7 @@
 
         color: $font-color-3;
         font-family: $text-font;
-        font-size: 1rem;
+        font-size: map-get($font-sizes, "small");
       }
 
       select:hover,
