--- a/client/src/Components/Misc/CarList/CarList.module.scss
+++ b/client/src/Components/Misc/CarList/CarList.module.scss
@@ -3,25 +3,24 @@
 
 .card-container {
   @include dimensions(100%, max-content);
-  max-width:80rem;
-  display: flex;
-  flex-flow: row wrap;
+  max-width: 80rem;
+  @include flex-box(row, wrap);
   align-content: space-between;
   justify-content: center;
   gap: 1rem;
   margin: auto;
-  
+
   & a {
-    @include dimensions(clamp(10rem, 18%, 15rem), max-content);
+    @include dimensions(clamp(12rem, 18%, 15rem), max-content);
     display: inline-block;
     padding-bottom: 1rem;
-    
+
     background-color: $bg-color-3;
     box-shadow: $shadow-2;
-    border-radius: 25px;
-    
+    @include border(null, null, null, map-get($radius, "medium"));
+
     color: $font-color-2;
-    
+
     overflow: hidden;
     transition: $transition;
 
@@ -32,21 +31,18 @@
 }
 
 .card {
-  position:relative;
-  display: flex;
-  flex-direction: column;
-  
+  position: relative;
+  @include flex-box(column, wrap);
+
   & h6,
   & p {
     padding: 0.5rem 0 0.5rem 1rem;
   }
 
-
-
   & h6 {
     @include dimensions(90%, auto);
 
-    font-weight: 600;
+    font-weight: map-get($font-weights, "medium");
     text-decoration: underline;
     text-decoration-color: $font-color-1;
     text-underline-offset: 5px;
@@ -80,7 +76,7 @@
       & img {
         all: unset;
         @include dimensions(100%, 100%);
-        
+
         object-position: center center;
         object-fit: cover;
       }
@@ -139,7 +135,7 @@
     text-align: center;
     color: $font-color-1;
     font-family: $link-font;
-    font-size: 1.6rem;
-    font-weight: 600;
+    font-size: map-get($font-sizes, "xl");
+    font-weight: map-get($font-weights, "medium");
   }
 }
