--- a/client/src/main-styles/common.scss
+++ b/client/src/main-styles/common.scss
@@ -28,21 +28,50 @@
   -webkit-animation: fade-in $transition cubic-bezier(0.645, 0.045, 0.355, 1)
     forwards;
   animation: fade-in $transition cubic-bezier(0.645, 0.045, 0.355, 1) forwards;
+  
+  @-webkit-keyframes fade-in {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+  @keyframes fade-in {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
 }
 
-@-webkit-keyframes fade-in {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
+.invert-full {
+  filter: invert(100%);
 }
-@keyframes fade-in {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
+
+.invert-medium {
+  filter: invert(60%);
 }
+
+.invert-low {
+  filter: invert(30%);
+}
+
+textarea {
+  @include dimensions(80%, 100%);
+  min-height: 100px;
+  padding: 0.5rem;
+  margin: auto;
+
+  border: none;
+  outline: none;
+  
+  font-family: $text-font;
+  color: $font-color-2;
+  font-weight:  map-get($font-weights,"medium");
+
+  resize: vertical;
+}
+
