--- a/client/src/main-styles/variables.scss
+++ b/client/src/main-styles/variables.scss
@@ -21,6 +21,8 @@ $success-color:rgb(42, 149, 42);
 $link-font: "Raleway", sans-serif;
 $text-font: "Nunito", sans-serif;
 
+$offset-top-header:3rem;
+
 $shadow:rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;;
 $shadow-2: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
   rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
