--- a/client/src/Components/Misc/Gallery/Gallery.module.scss
+++ b/client/src/Components/Misc/Gallery/Gallery.module.scss
@@ -27,7 +27,6 @@
       @include dimensions(20px, 20px);
 
       pointer-events: none;
-      filter: invert(80%);
       transition: $transition;
     }
 
@@ -41,16 +40,6 @@
   }
 }
 
-.button-backward {
-  left: 0;
-  border-radius: 0 25% 25% 0;
-}
-
-.button-forward {
-  right: 0;
-  border-radius: 25% 0 0 25%;
-}
-
 .button-expand {
   top: 0 !important;
   right: 0;
@@ -59,8 +48,7 @@
 
 .photo-row {
   @include dimensions(100%, max-content);
-  display: flex;
-  flex-direction: row;
+  @include flex-box(row);
   justify-content: flex-start;
   column-gap: 0.3rem;
   padding-bottom: 0.5rem;
@@ -121,7 +109,6 @@
       @include dimensions(20px, 20px);
 
       pointer-events: none;
-      filter: invert(80%);
       transition: $transition;
     }
 
@@ -147,6 +134,7 @@
     opacity: 1;
   }
 }
+
 @keyframes slide-in-right {
   0% {
     -webkit-transform: translateX(1000px);
