--- a/client/src/Components/Misc/Loaders/Loaders.module.scss
+++ b/client/src/Components/Misc/Loaders/Loaders.module.scss
@@ -5,12 +5,34 @@
   @include dimensions(3rem, 3rem);
   margin: auto;
 
-  border-radius: 50%;
+  border-radius: map-get($radius,"circle");
   border-top: solid $nav-bg-color-light 5px;
   border-right: solid $nav-bg-color-light 5px;
 
   -webkit-animation: rotate-center 1s linear infinite both;
   animation: rotate-center 1s linear infinite both;
+
+  @-webkit-keyframes rotate-center {
+    0% {
+      -webkit-transform: rotate(0);
+      transform: rotate(0);
+    }
+    100% {
+      -webkit-transform: rotate(360deg);
+      transform: rotate(360deg);
+    }
+  }
+  
+  @keyframes rotate-center {
+    0% {
+      -webkit-transform: rotate(0);
+      transform: rotate(0);
+    }
+    100% {
+      -webkit-transform: rotate(360deg);
+      transform: rotate(360deg);
+    }
+  }
 }
 
 .white {
@@ -23,35 +45,12 @@
   border-left: solid $bg-color-3 5px;
 }
 
-@-webkit-keyframes rotate-center {
-  0% {
-    -webkit-transform: rotate(0);
-    transform: rotate(0);
-  }
-  100% {
-    -webkit-transform: rotate(360deg);
-    transform: rotate(360deg);
-  }
-}
-
-@keyframes rotate-center {
-  0% {
-    -webkit-transform: rotate(0);
-    transform: rotate(0);
-  }
-  100% {
-    -webkit-transform: rotate(360deg);
-    transform: rotate(360deg);
-  }
-}
 
 .backdrop {
   @include dimensions(100vw, 100vh);
   position: fixed;
   inset: 0;
-  display: flex;
-  flex-direction: row;
-  justify-content: right;
+  @include flex-box(row);
   z-index: 5;
 
   background-color: $backdrop-color-light;
