--- a/client/src/Components/Profile/Profile.module.scss
+++ b/client/src/Components/Profile/Profile.module.scss
@@ -16,16 +16,6 @@
     border-bottom: 2px solid $bg-color-3;
   }
 
-  h2 {
-    margin: 2rem auto;
-
-    color: $font-color-1;
-    font-family: $text-font;
-    font-size: 1.5rem;
-    font-weight: 600;
-    text-align: center;
-  }
-
   & > div {
     text-align: center;
 
@@ -37,14 +27,12 @@
       text-align: center;
       color: $font-color-3;
       font-family: $text-font;
-      font-size: 1rem;
-      font-weight: 600;
+      font-size: map-get($font-sizes, "small");
+      font-weight: map-get($font-weights, "medium");
 
       background-color: $nav-bg-color-light;
-      border: none;
-      border-radius: 25px;
-      outline: solid 2px rgba(255, 255, 255, 0);
-      outline-offset: 2px;
+      @include border(null, null, null, map-get($radius, "medium"));
+      @include outline(solid, 2px, rgba(255, 255, 255, 0), 2px);
 
       cursor: pointer;
       transition: $transition;
@@ -57,7 +45,7 @@
 }
 
 .active {
-  outline: solid 2px $font-color-1 !important;
+  @include outline(solid, 2px, $font-color-1 !important, 2px);
 }
 
 .card-container {
@@ -65,8 +53,8 @@
   margin: 0 auto;
   padding-top: 1rem;
 
+  border-radius: map-get($radius, "medium");
   background-color: $bg-color-3;
-  border-radius: 25px;
   box-shadow: $shadow-2;
 
   text-align: center;
@@ -82,7 +70,7 @@
       margin-bottom: 1.3rem;
 
       color: $font-color-2;
-      font-weight: 600;
+      font-weight: map-get($font-weights, "medium");
       text-transform: capitalize;
     }
   }
@@ -96,9 +84,8 @@
   & > div:nth-of-type(1) {
     @include dimensions(100%, 100%);
 
-    border-radius: 50%;
-    outline: 9px solid $nav-bg-color-light;
-    outline-offset: -9px;
+    border-radius: map-get($radius, "circle");
+    @include outline(solid, 9px, $nav-bg-color-light, -9px);
     box-shadow: $shadow-2;
 
     overflow: hidden;
@@ -125,7 +112,7 @@
       display: inline-block;
       padding: 0.5rem 0;
 
-      border-radius: 25px;
+      border-radius: map-get($radius, "medium");
       background-color: $nav-bg-color-medium;
       cursor: pointer;
 
@@ -136,14 +123,12 @@
       @include dimensions(1.5rem, 1.5rem);
       position: absolute;
       top: -1.5rem;
-      display: flex;
-      flex-direction: row;
+      @include flex-box(row);
       justify-content: center;
       align-items: center;
 
       background-color: $error-color;
-      border-radius: 50%;
-      border: none;
+      @include border(null, null, null, map-get($radius, "circle"));
       outline: none;
       box-shadow: $shadow;
 
@@ -154,7 +139,6 @@
         @include dimensions(1rem, 1rem);
 
         pointer-events: none;
-        filter: invert(100%);
       }
 
       &:nth-of-type(1) {
