--- a/client/src/main-styles/common.scss
+++ b/client/src/main-styles/common.scss
@@ -51,12 +51,26 @@
   filter: invert(100%);
 }
 
+.invert-high {
+  filter: invert(80%);
+}
+
 .invert-medium {
   filter: invert(60%);
 }
 
 .invert-low {
-  filter: invert(30%);
+  filter: invert(40%);
+}
+
+.button-backward {
+  left: 0;
+  border-radius: 0 25% 25% 0;
+}
+
+.button-forward {
+  right: 0;
+  border-radius: 25% 0 0 25%;
 }
 
 textarea {
