--- a/client/src/main-styles/App.scss
+++ b/client/src/main-styles/App.scss
@@ -28,10 +28,14 @@ main {
   position: relative;
 }
 
-
 a {
   text-decoration: none;
   color: $font-color-3;
   font-family: $link-font;
 }
 
+@media only screen and (max-width: 600px) {
+  main {
+    margin-top: 1rem;
+  }
+}
