--- a/client/src/Components/Home/Search.module.scss
+++ b/client/src/Components/Home/Search.module.scss
@@ -2,7 +2,7 @@
 @import "../../main-styles/variables.scss";
 
 .form-wrapper {
-  @include dimensions(clamp(400px, 70%, 1000px), max-content);
+  @include dimensions(clamp(600px, 70%, 1000px), max-content);
   margin: auto;
 
   & form {
@@ -100,6 +100,35 @@
       button:hover,
       button:focus {
         box-shadow: $shadow-inset;
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 700px) {
+  .form-wrapper {
+    @include dimensions(100%, max-content);
+
+    & form {
+      padding: 0.5rem;
+      border-radius: 0;
+      margin:auto;
+
+      & div {
+        button {
+          @include dimensions(60%, max-content);
+        }
+
+        & > div {
+          & img {
+            @include dimensions(10px, 10px);
+            right: 0.5rem;
+          }
+        }
+
+        select {
+          padding: 0.8rem;
+        }
       }
     }
   }
