--- a/client/src/main-styles/App.scss
+++ b/client/src/main-styles/App.scss
@@ -36,6 +36,7 @@ a {
 
 @media only screen and (max-width: 600px) {
   main {
-    margin-top: 1rem;
+    margin-top: 3.5rem;
+    min-height:60vh;
   }
 }
